2009-03-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Implement dummy solver.
	* configure.ac: Search for Boost.
	* src/Makefile.am: Fix filenames.
	* src/optimization-fwd.hh: Add forward declarations.
	* src/plug-in/dummy/dummy.cc: Implement dummy solver.
	* src/solver.cc,
	* src/solver.hh: Implement abstract solver.
	* tests/common.hh: Fix GENERATE_TEST macro.
	* tests/simple-test.at: Fix description.
	* tests/simple-test.cc: Implement test using the dummy solver.

2009-03-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Update and add support for Boost.Optional.
	* build-aux/boost.m4: Here.

2009-03-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Rename main header/source files.
	* src/solver.cc: Rename from src/optimization.cc.
	* src/solver.hh: Rename from src/optimization.hh.

2009-03-24  Thomas Moulard  <thomas.moulard@gmail.com>

	Add dummy plug-in placeholder.
	* configure.ac: Generate plug-in, dummy Makefiles.
	* src/Makefile.am: Add plug-in to SUBDIRS.
	* src/plug-in/Makefile.am: New.
	* src/plug-in/dummy/Makefile.am: New.
	* src/plug-in/dummy/dummy.cc: New.

2009-03-24  Thomas Moulard  <thomas.moulard@gmail.com>

	Ignore svnw related files.
	* .gitignore: Here.

2009-03-24  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix compilation issues.
	* .gitignore: Add Autotools generated files.
	* configure.ac: Set where Libool should copy its files.
	* tests/Makefile.am: Add simple-test.
	* tests/simple-test.cc: Add missing header.
	* tests/simple-test.stdout: Add simple-test output.
