@@ -1,0 +1,13 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+datarootdir=@datarootdir@
+docdir=@datadir@/doc/@PACKAGE_NAME@
+
+Name: @PACKAGE@
+Description:
+Version: @VERSION@
+Requires:
+Libs: -L${libdir} -ltoto
+Cflags: -I${includedir}
